# browsterm

./: AGENTS.md  BLOCKED.md  Cargo.toml  INBOX.md  README.md  VISION.md  build.rs
specs/: tabs.md
src/: assets.rs  browser.rs  config.rs  fs.rs  main.rs  pty.rs  server.rs  terminal.rs
src/static/: app.css  app.js  index.html
